--- a/.grype.yml
+++ b/.grype.yml
@@ -23,3 +23,8 @@ ignore:
   - vulnerability: CVE-2024-34158
   - vulnerability: CVE-2024-34156
   - vulnerability: CVE-2024-34155
+  # Issue due to crypto package pulled in by GitHub CLI
+  # Will be fixed in next GitHub CLI release
+  # Last Checked: Dec 19th, 2024
+  - vulnerability: GHSA-v778-237x-gjrc
+  - vulnerability: GHSA-w32m-9786-jp63
