[Issue #3855] Address anchore issues (#3856)
## Summary
Fixes #3855

### Time to review: __3 mins__

## Changes proposed
Upgrade the debian library to get a patched version, ignore the esbuild
issue for now since we don't install/call it and it's low likelihood of
exploit.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -27,6 +27,7 @@ RUN apt-get update \
         libpq-dev \
         postgresql \
         wget \
+        libtasn1-6 \
     # Reduce the image size by clear apt cached lists
     # Complies with https://github.com/codacy/codacy-hadolint/blob/master/codacy-hadolint/docs/description/DL3009.md
     && rm -fr /var/lib/apt/lists/* \
