--- a/.grype.yml
+++ b/.grype.yml
@@ -19,18 +19,12 @@ ignore:
   - fix-state: wont-fix
   - fix-state: unknown
 
-  # https://github.com/HHS/simpler-grants-gov/issues/2582
-  - vulnerability: CVE-2024-34158
-  - vulnerability: CVE-2024-34156
-  - vulnerability: CVE-2024-34155
-  # Issue due to crypto package pulled in by GitHub CLI
-  # Will be fixed in next GitHub CLI release
-  # Last Checked: Dec 19th, 2024
-  - vulnerability: GHSA-v778-237x-gjrc
-  - vulnerability: GHSA-w32m-9786-jp63
-  # Issue with asyncio library in Python, should be fixed
-  # in 3.13.2 (early February 2025)
-  - vulnerability: CVE-2024-12254
+  # Issue with mimetype logic on Windows only
+  # No exact timeline on a fix
+  # vuln scanning thinks Python 3.14 has a fix, which would be Oct 2025
+  # Last Checked: Mar 7th, 2025
+  # TODO Issue
+  - vulnerability: CVE-2024-3220
 
   # https://github.com/HHS/simpler-grants-gov/issues/3855
   # esbuild fixed in a new minor version, but we don't install/call esbuild directly
