--- a/analytics/pyproject.toml
+++ b/analytics/pyproject.toml
@@ -22,7 +22,7 @@ plotly = "^5.15.0"
 pydantic = "^2.0.3"
 python = "~3.13"
 slack-sdk = "^3.23.0"
-sqlparse = "^0.4.4"
+sqlparse = ">=0.5.0"
 typer = { extras = ["all"], version = "^0.15.0" }
 sqlalchemy = "^2.0.30"
 pydantic-settings = "^2.3.4"
